update(divisistService): avances en implementación de getPensum
