# public/swagger.json
@@ -91,6 +91,9 @@
 						"type": "number",
 						"format": "double"
 					},
+					"carrera": {
+						"type": "string"
+					},
 					"codigo": {
 						"type": "string"
 					},
@@ -123,6 +126,7 @@
 				},
 				"required": [
 					"semestre",
+					"carrera",
 					"codigo",
 					"nombre",
 					"horas",
@@ -154,7 +158,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"CarreraInfoResponse": {
+			"CarreraInfo": {
 				"properties": {
 					"codigo": {
 						"type": "string"
@@ -405,8 +409,34 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/CarreraInfoResponse"
+									"$ref": "#/components/schemas/CarreraInfo"
 								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "ci_session",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/divisist/pensum": {
+			"get": {
+				"operationId": "GetPensum",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
 							}
 						}
 					}
