# src/controllers/divisistController.ts
@@ -1,5 +1,6 @@
 import { Get, Query, Route } from "tsoa";
 import DivisistService, { CarreraInfo } from "../services/divisistService";
+import { Pensum } from "../model/allmodels";
 
 
 
@@ -15,5 +16,10 @@ export default class DivisistController {
     @Get("/carrera")
     public async getCarreraInfo(@Query() ci_session: string): Promise<CarreraInfo> {
         return await this.divisistService.getCarreraInfo(ci_session);
+    }
+
+    @Get("/pensum")
+    public async getPensum(@Query() ci_session: string): Promise<Pensum> {
+        return await this.divisistService.getPensum(ci_session);
     }
 }
